Added routing, added game logic depending on gamemode, renamed medium to intermediate

--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
         <div class="col"><img style="background-image: url(&quot;assets/img/backgroun_image_main.jpg&quot;);width: 100%;height: 400px;background-repeat: repeat;background-size: cover;background-position: center;"></div>
     </div>
     <div class="login-clean">
-        <form method="post">
+        <form>
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-android-share-alt"></i></div>
             <div class="form-group">
                 <h1 class="text-center">Word game</h1>
             </div>
-            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Easy</button><button class="btn btn-primary btn-block" type="submit">Intermediate</button><button class="btn btn-primary btn-block" type="submit">Hard</button><button class="btn btn-primary btn-block"
-                    type="submit">Advanced</button></div>
+            <div class="form-group"><a class="btn btn-primary btn-block" href="game.html?gamemode=easy">Easy</a><a class="btn btn-primary btn-block" href="game.html?gamemode=intermediate">Intermediate</a><a class="btn btn-primary btn-block" href="game.html?gamemode=hard">Hard</a><a class="btn btn-primary btn-block" href="game.html?gamemode=advanced">Advanced</a></div>
         </form>
     </div>
     <script src="assets/js/jquery.min.js"></script>
