--- a/game.html
+++ b/game.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>DOT</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Clean.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
+    <link rel="stylesheet" href="assets/css/Login-Form-Clean.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <div class="row">
-        <div class="col"><img style="background-image: url(&quot;assets/img/backgroun_image_main.jpg&quot;);width: 100%;height: 400px;background-repeat: repeat;background-size: cover;background-position: center;"></div>
+      <div class="col">
+        <img
+          style="
+            background-image: url('assets/img/backgroun_image_main.jpg');
+            width: 100%;
+            height: 400px;
+            background-repeat: repeat;
+            background-size: cover;
+            background-position: center;
+          "
+        />
+      </div>
     </div>
     <div class="login-clean">
-        <form method="post">
-            <h2 class="sr-only">Login Form</h2>
-            <div class="illustration"><img id="gamepicture"></div>
-            <div class="form-group">
-                <div id="hold"></div>
-            </div>
-            <div class="form-group"></div>
-        </form>
+      <form style="width: 1000px; height: 400px; max-width: 1000px ;">
+        <h2 class="sr-only">Login Form</h2>
+        <div class="illustration"><img id="gamepicture" /></div>
+        <div class="form-group">
+          <div id="hold"></div>
+        </div>
+        <div class="form-group"></div>
+      </form>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script type="module" src="assets/js/game.js"></script>
-</body>
-
+  </body>
 </html>
