--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="login-clean">
-      <form style="width: 1000px; height: 400px; max-width: 1000px ;">
+      <form style="width: 1000px; height: 400px; max-width: 1000px">
         <h2 class="sr-only">Login Form</h2>
         <div class="illustration"><img id="gamepicture" /></div>
         <div class="form-group">
