Added endgame function

--- a/game.html
+++ b/game.html
@@ -31,6 +31,7 @@
     <div class="login-clean">
       <form style="width: 1000px; height: 400px; max-width: 1000px">
         <h2 class="sr-only">Login Form</h2>
+        <h1 id="counter">1/10</h1>
         <div class="illustration"><img id="gamepicture" /></div>
         <div class="form-group">
           <div id="hold"></div>
