Huge refactoring to code, added categories option to game

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <h1 class="text-center">Word game</h1>
             </div>
-            <div class="form-group"><a class="btn btn-primary btn-block" href="game.html?gamemode=easy">Easy</a><a class="btn btn-primary btn-block" href="game.html?gamemode=intermediate">Intermediate</a><a class="btn btn-primary btn-block" href="game.html?gamemode=hard">Hard</a><a class="btn btn-primary btn-block" href="game.html?gamemode=advanced">Advanced</a></div>
+            <div class="form-group"><a class="btn btn-primary btn-block" href="categories.html?gamemode=easy">Easy</a><a class="btn btn-primary btn-block" href="categories.html?gamemode=intermediate">Intermediate</a><a class="btn btn-primary btn-block" href="categories.html?gamemode=hard">Hard</a><a class="btn btn-primary btn-block" href="categories.html?gamemode=advanced">Advanced</a></div>
         </form>
     </div>
     <script src="assets/js/jquery.min.js"></script>
