--- a/game.html
+++ b/game.html
@@ -29,9 +29,10 @@
       </div>
     </div>
     <div class="login-clean">
-      <form style="width: 1000px; height: 400px; max-width: 1000px">
+      <form style="width: 1000px; height: 400px; max-width: 1000px" id="testingForm">
         <h2 class="sr-only">Login Form</h2>
-        <h1 id="counter">1/10</h1>
+        <h1 id="counter" style="display: block;">1/10</h1><h1 id="results" style="display: none;text-align:center;">Results</h1>
+        <p id="score" style="display:none;text-align:center;"></p>
         <div class="illustration"><img id="gamepicture" /></div>
         <div class="form-group">
           <div id="hold"></div>
